syntax = "proto3";

message News {
    string id = 1;
    string title = 2;
    string body = 3;
    string postImage = 4;
}

message RawNews {
    string title = 1;
    string body = 2;
    string postImage = 3;
}

service NewsService {
    rpc GetAllNews (Empty) returns (NewsList) {};
    rpc GetNews (NewsId) returns (News) {}
    rpc AddNews (RawNews) returns (News) {}
    rpc EditNews (News) returns (News) {}
    rpc DeleteNews (NewsId) returns (Empty) {}
}

message Empty {}

message NewsId {
    string id = 1;
}

message NewsList {
    repeated News news = 1;
}